<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="#Be5025"
        tools:context=".RecipientRegistrationActivity">>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="#fff"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/applogo"/>

            <TextView
                android:text="Recipient registratiion"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="sign up to continue"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="90dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_image"
                app:civ_border_width="2dp"
                android:layout_gravity="center"
                app:civ_border_color="#FF000000"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_person"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerIdnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_id_number"
                    android:inputType="number"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_number"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/bloodGroupsSpinner"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="#fff"
                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:entries="@array/blodgroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_mail"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_lock"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:text="Sign up Now"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/backbutton"
                android:text="Already registred? Sign In"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </ScrollView>
